# json-stream-analyzer

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  main.cpp
cli/: CMakeLists.txt  main.cpp
fixtures/: 001-sample.json  001-simple-example.json  002-bool-data.json  003-data-with-null.json  005-bad-object.json  006-bad-array.json  007-bad-object-missed-colon.json
include/: json-stream-analyzer.h
include/json-stream-analyzer/: decoder.h  element.h  encoder.h  io_buffer.h  stream.h  token.h
include/json-stream-analyzer/buffer/: file-reader.h  memory-buffer.h
include/json-stream-analyzer/token/: array-close.h  array-open.h  braces-close.h  braces-open.h  colon.h  comma.h  numeric.h  quotes.h  text.h
json/: pretty.cpp  stream.cpp  stream.h
json/tokens/: token.h  token_lexeme_word.cpp
src/: decoder.cpp  encoder.cpp  exceptions.cpp  main.cpp  stream.cpp
src/buffer/: io_buffer.cpp  io_file_reader.cpp  io_memory_buffer.cpp
src/json/: decoder.cpp  object.cpp  pretty.cpp  stream.cpp  stream.h
src/json/object/: element.cpp  object.h  value.cpp
src/json/tokens/: token.cpp  token.h  token_array_close.cpp  token_array_open.cpp  token_braces_close.cpp  token_braces_open.cpp  token_colon.cpp  token_comma.cpp  token_lexeme_word.cpp  token_numeric.cpp  token_quotes.cpp
src/object/: element.cpp
src/tokens/: token.cpp  token_array_close.cpp  token_array_open.cpp  token_bool.cpp  token_braces_close.cpp  token_braces_open.cpp  token_colon.cpp  token_comma.cpp  token_lexeme_word.cpp  token_null.cpp  token_numeric.cpp  token_quotes.cpp
tests/: CMakeLists.txt  test.sh  testcase.cpp  tests.cpp  tests.h  testsuite.cpp
